# RoboMaster-2025

./: 第二轮考核-dixiatielu.md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/enemy_detector/lib/enemy_detector/: enemy_coordinates_node
ros2_ws/install/enemy_detector/share/enemy_detector/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/enemy_detector/share/enemy_detector/cmake/: enemy_detectorConfig.cmake
ros2_ws/install/enemy_marker_publisher/lib/enemy_marker_publisher/: enemy_marker_node
ros2_ws/install/enemy_marker_publisher/share/enemy_marker_publisher/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/image_fps_processor/lib/image_fps_processor/: image_fps_node
ros2_ws/install/image_fps_processor/share/ament_index/resource_index/package_run_dependencies/: image_fps_processor
ros2_ws/install/image_fps_processor/share/image_fps_processor/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/sentry_description/share/sentry_description/: package.sh
ros2_ws/log/: latest_build
ros2_ws/src/enemy_detector/: CMakeLists.txt
ros2_ws/src/enemy_detector/src/: enemy_coordinates_node.cpp
ros2_ws/src/enemy_marker_publisher/: CMakeLists.txt  package.xml
ros2_ws/src/enemy_marker_publisher/src/: enemy_marker_node.cpp
ros2_ws/src/image_fps_processor/: CMakeLists.txt  package.xml
ros2_ws/src/image_fps_processor/src/: image_fps_node.cpp
